Fri Oct 21 17:42:28 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: added missing "usage" definitions from HID Power
   Device specification, corrected spellings.

Fri Oct 21 03:38:17 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: enforce using "-x vendorid" together with "-x generic". 
 - newhidups: added new info to man page and docs/hid-subdrivers.txt

Fri Oct 21 03:03:44 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: added "-x generic" option to allow connecting to an
   unsupported UPS. This should be used together with the "-x
   vendorid" option to select the device to connect to, and allows
   users to product a dump of the usage tree of an unknown device
   without having to modify the sources.

Wed Oct 19 14:10:29 UTC 2005 / Arnaud Quette <aquette.dev@gmail.com>

 - debian/: more update (still draft) to prepare 2.0.2-2 release

 - nitram: new driver for Nitram Elite 2005, and probably some
   recent Cyberpower units

   (Olivier Albiez)

Mon Oct 10 20:15:24 UTC 2005 / Arnaud Quette <aquette.dev@gmail.com>

 - driver.list: add Eltek AL175 alarm module (Kirill Smelkov)
 
Sun Oct  9 05:31:09 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: repaired the way status flags are stored. Note that
   there can be more than one device status flag (such as "lowbatt"
   and "shutdownimm") mapped to the same NUT status (such as "LB").
   We now store the device flags, and convert them to NUT values only
   on request. This solves the problem where multiple variables (e.g.
   "lowbatt" and "shutdownimm") might have erased each other's values
   if one was set and the other was not. This also solves the issue
   reported by Alfred Ganz of the CHRG and DISCHRG flags not being
   cleared properly.

 - newhidups: added NUT status flags OVERHEAT, COMMFAULT, DEPLETED;
   these already exist in the belkinunv driver.
