@@ -47,8 +47,8 @@
 "Belkin"	"Resource"	""		"genericups upstype=4"
 "Belkin"	"Home Office"	"F6H350-SER, F6H500-SER, F6H650-SER"	"genericups upstype=7"
 "Belkin"	"Universal UPS" "F6C800-UNV, F6C120-UNV, F6C1100-UNV"	"belkinunv"
-"Belkin"	"Universal UPS" "F6C800-UNV, F6C120-UNV, F6C1100-UNV"	"newhidups (experimental USB driver for Linux)"
-"Belkin"	"Office Series"	"F6C550-AVR"	"newhidups (experimental USB driver for Linux)"
+"Belkin"	"Universal UPS" "F6C800-UNV, F6C120-UNV, F6C1100-UNV"	"newhidups (USB driver)"
+"Belkin"	"Office Series"	"F6C550-AVR"	"newhidups (USB driver)"
 
 "Best Power"	"Fortress (newer)"	""	"bestups"
 "Best Power"	"Fortress Telecom"	""	"bestups"
@@ -78,6 +78,7 @@
 "Cyber Power Systems"	"CPS825VA"	""	"cpsups (experimental)"
 "Cyber Power Systems"	"1100AVR"	""	"cpsups (experimental)"
 "Cyber Power Systems"	"1500AVR-HO"	""	"cpsups (experimental)"
+"Cyber Power Systems"   "685AVR"        ""      "newhidups (USB driver)"
 
 "Deltec"	"PowerRite Pro II"	""	"genericups upstype=15"
 
