@@ -1,3 +1,9 @@
+Sun Oct 23 05:24:25 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>
+
+ - newhidups: added support for CyberPower 685AVR, based on HID Usage
+   Tree posted by Scott Alfter. This is very similar to APC, so
+   combined APC and CyberPower into a single subdriver.
+
 Fri Oct 21 17:42:28 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>
 
  - newhidups: added missing "usage" definitions from HID Power
